--- a/baxBet/mail_1.html
+++ b/baxBet/mail_1.html
@@ -77,7 +77,7 @@
         }
         ul.text {
             margin-top: 15px;
-            list-style-image: url(./img/list-item.png);
+            list-style-image: url(https://belshed.github.io/baxBet/img/list-item.png);
             padding-left: 25px;
         }
         ul.text li {
@@ -129,7 +129,7 @@
             background-color: #150214;
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url(./img/card-bg.png);
+            background-image: url(https://belshed.github.io/baxBet/img/card-bg.png);
         }
 
         .card__title, .card__subtitle {
@@ -156,8 +156,8 @@
 
         @media screen and (max-width: 580px) {
             .inner td{
-                padding-left: 25px;
-                padding-right: 25px;
+                padding-left: 25px !important;
+                padding-right: 25px !important;
             }
 
             .text {
@@ -171,22 +171,23 @@
             .benefit {
                 margin-left: auto !important;
                 margin-right: auto !important;
-                display: block;
+                display: block !important;
             }
         }
 
         @media screen and (max-width: 440px) {
             .card__body {
-                padding: 30px 20px;
+                padding: 30px 45px !important;
+                background-image: none !important;
             }
 
             .card__body > * {
-                display: block;
-                max-width: none;
+                display: block !important;
+                max-width: none !important;
             }
 
             .bottom td td {
-                display: block;
+                display: block !important;
                 text-align: center !important;
                 padding: 10px 0px !important;
             }
@@ -200,7 +201,7 @@
                 <table cellspacing="0" border="0" class="container header">
                     <tr align="justify">
                         <td>
-                            <img src="./img/logo.png" alt="Logo">
+                            <img src="https://belshed.github.io/baxBet/img/logo.png" alt="Logo">
                         </td>
                         <td align="right">
                             <a href="#" class="header__link">Вход</a>
@@ -214,7 +215,7 @@
                 <table cellspacing="0" border="0" class="container wrapper">
                     <tr class="hero">
                         <td>
-                            <img src="./img/hero.png" class="hero__img" alt="Hero image">
+                            <img src="https://belshed.github.io/baxBet/img/hero.png" class="hero__img" alt="Hero image">
                         </td>
                     </tr>
                     <tr class="inner content">
@@ -241,14 +242,14 @@
                             <table style="width: 100%;">
                                 <tr align="justify">
                                     <td style="padding: 0%;">
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-1.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="https://www.instagram.com/baxbet.casino/" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-1.png" alt="Иконка" class="bottom__link-img">
                                         </a>
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-2.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="https://t.me/baxbet_casino" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-2.png" alt="Иконка" class="bottom__link-img">
                                         </a>
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-3.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="www.facebook.com/groups/baxbet.casino/" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-3.png" alt="Иконка" class="bottom__link-img">
                                         </a>
                                     </td>
                                     <td style="padding: 0%;" align="right">
