--- a/baxBet/mail_2.html
+++ b/baxBet/mail_2.html
@@ -19,7 +19,7 @@
         img {
             max-width: 100%;
             border: none;
-            display: block;
+            display: block !important;
         }
 
         a {
@@ -83,7 +83,7 @@
         }
         ul.text {
             margin-top: 15px;
-            list-style-image: url(./img/list-item.png);
+            list-style-image: url(https://belshed.github.io/baxBet/img/list-item.png);
             padding-left: 25px;
         }
         ul.text li {
@@ -135,7 +135,7 @@
             background-color: #150214;
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url(./img/card-bg.png);
+            background-image: url(https://belshed.github.io/baxBet/img/card-bg.png);
         }
 
         .card__title, .card__subtitle {
@@ -175,7 +175,7 @@
             background-size: cover;
             background-position: center;
             overflow: hidden;
-            background-image: url(./img/gradient.png);
+            background-image: url(https://belshed.github.io/baxBet/img/gradient.png);
         }
 
         .hr {
@@ -266,7 +266,7 @@
                 float: none !important;
                 margin-right: auto !important;
                 margin-bottom: 20px !important;
-                margin-left: auto;
+                margin-left: auto !important;
             }
 
             .welcome .text {
@@ -274,13 +274,16 @@
             }
 
             .welcome .gradient-link {
-                margin-left: auto;
-                margin-right: auto;
-                display: block;
+                margin-left: auto !important;
+                margin-right: auto !important;
+                display: block !important;
             }
 
             .rang__icon {
-                margin-bottom: 15px;
+                margin-bottom: 15px !important;
+                display: block !important;
+                margin-left: auto !important;
+                margin-right: auto !important;
             }
             
             .rang .text {
@@ -292,8 +295,9 @@
             }
 
             .rang__icon img {
-                margin-left: auto;
-                margin-right: auto;
+                display: block !important;
+                margin-left: auto !important;
+                margin-right: auto !important;
             }
         }
     </style>
@@ -305,7 +309,7 @@
                 <table cellspacing="0" border="0" class="container header">
                     <tr align="justify">
                         <td>
-                            <img src="./img/logo.png" alt="Logo">
+                            <img src="https://belshed.github.io/baxBet/img/logo.png" alt="Logo">
                         </td>
                         <td align="right">
                             <a href="#" class="header__link">Вход</a>
@@ -316,7 +320,7 @@
         </tr>
         <tr class="hero">
             <td align="center">
-                <img src="./img/hero-2.png" class="container hero__img hero__img_cards" alt="Hero image">
+                <img src="https://belshed.github.io/baxBet/img/hero-2.png" class="container hero__img hero__img_cards" alt="Hero image">
             </td>
         </tr>
         <tr>
@@ -328,7 +332,7 @@
                             <table class="welcome">
                                 <tr>
                                     <td style="padding: 0px;">
-                                        <img src="./img/welcome.png" class="welcome__img" style="margin-right: 30px; height: 100%; float: left;" alt="Картинка">
+                                        <img src="https://belshed.github.io/baxBet/img/welcome.png" class="welcome__img" style="margin-right: 30px; height: 100%; float: left;" alt="Картинка">
                                         <p class="text" style="margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus accumsan lacus vel facilisis.</p>
                                         <a href="#" class="gradient-link">Кнопка</a>
                                     </td>
@@ -347,7 +351,7 @@
                             <table class="rang" style="margin-bottom: 40px;">
                                 <tr>
                                     <td class="rang__icon">
-                                        <img class="rang__img" src="./img/rang.png" alt="">
+                                        <img class="rang__img" src="https://belshed.github.io/baxBet/img/rang.png" alt="">
                                         <span class="rang__name">Ранг</span>
                                     </td>
                                     <td style="padding: 0px;">
@@ -365,23 +369,23 @@
                     <tr class="inner">
                         <td align="justify">
                             <div class="benefit">
-                                <img src="./img/benefit-1.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/benefit-1.png" alt="Иконка" class="benefit__img">
                                 <p class="benefit__text text text_center">Cashback 10% от суммы депозитов каждую неделю с wager 10x.</p>
                             </div>
                             <div class="benefit">
-                                <img src="./img/benefit-2.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/benefit-2.png" alt="Иконка" class="benefit__img">
                                 <p class="benefit__text text text_center">Подарок в День Рождения 3,000 ₽ <br> с wager 40.</p>
                             </div>
                             <div class="benefit">
-                                <img src="./img/benefit-3.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/benefit-3.png" alt="Иконка" class="benefit__img">
                                 <p class="benefit__text text text_center">Курс обмена: 1 Bax Поинт = 1 ₽ с wager 2x.</p>
                             </div>
                             <div class="benefit">
-                                <img src="./img/benefit-4.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/benefit-4.png" alt="Иконка" class="benefit__img">
                                 <p class="benefit__text text text_center">Круглосуточная служба поддержки.</p>
                             </div>
                             <div class="benefit" style="margin-left: 150px;">
-                                <img src="./img/benefit-5.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/benefit-5.png" alt="Иконка" class="benefit__img">
                                 <p class="benefit__text text text_center">Суточный лимит на вывод средств <br> 100,000 ₽.</p>
                             </div>
                         </td>
@@ -401,14 +405,14 @@
                             <table style="width: 100%;">
                                 <tr align="justify">
                                     <td style="padding: 0%;">
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-1.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="https://www.instagram.com/baxbet.casino/" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-1.png" alt="Иконка" class="bottom__link-img">
                                         </a>
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-2.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="https://t.me/baxbet_casino" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-2.png" alt="Иконка" class="bottom__link-img">
                                         </a>
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-3.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="www.facebook.com/groups/baxbet.casino/" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-3.png" alt="Иконка" class="bottom__link-img">
                                         </a>
                                     </td>
                                     <td style="padding: 0%;" align="right">
