--- a/baxBet/mail_3.html
+++ b/baxBet/mail_3.html
@@ -88,7 +88,7 @@
         }
         ul.text {
             margin-top: 15px;
-            list-style-image: url(./img/list-item.png);
+            list-style-image: url(https://belshed.github.io/baxBet/img/list-item.png);
             padding-left: 25px;
         }
         ul.text li {
@@ -140,7 +140,7 @@
             background-color: #150214;
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url(./img/card-bg.png);
+            background-image: url(https://belshed.github.io/baxBet/img/card-bg.png);
         }
 
         .card__title, .card__subtitle {
@@ -180,7 +180,7 @@
             background-size: cover;
             background-position: center;
             overflow: hidden;
-            background-image: url(./img/gradient.png);
+            background-image: url(https://belshed.github.io/baxBet/img/gradient.png);
         }
 
         .hr {
@@ -323,11 +323,11 @@
             }
 
             .header {
-                padding: 10px;
+                padding: 10px !important;
             }
 
             .hero_black {
-                background-position: 60% center;
+                background-position: 60% center !important;
             }
 
             .text {
@@ -345,8 +345,9 @@
             }
 
             .model {
-                max-width: 400px;
-                width: 100%;
+                max-width: 400px !important;
+                width: 100% !important;
+                display: block !important;
             }
 
             .hero__img_cards {
@@ -389,7 +390,7 @@
                 <table cellspacing="0" border="0" class="container header">
                     <tr align="justify">
                         <td>
-                            <img src="./img/logo.png" alt="Logo">
+                            <img src="https://belshed.github.io/baxBet/img/logo.png" alt="Logo">
                         </td>
                         <td align="right">
                             <a href="#" class="header__link">Вход</a>
@@ -398,7 +399,7 @@
                 </table>
             </td>
         </tr>
-        <tr class="hero hero_black" style="background-image: url(./img/hero-3.jpg);">
+        <tr class="hero hero_black" style="background-image: url(https://belshed.github.io/baxBet/img/hero-3.jpg);">
             <td>
                 <table class="container hero__content">
                     <tr>
@@ -425,17 +426,17 @@
                     <tr>
                         <td align="center" style="padding-left: 10px; padding-right: 10px;">
                             <div class="model">
-                                <img src="./img/model-1.png" alt="Иконка" class="model__img">
+                                <img src="https://belshed.github.io/baxBet/img/model-1.png" alt="Иконка" class="model__img">
                                 <h3 class="model__title">CPA</h3>
                                 <p class="model__text">до 65 % за действие</p>
                             </div>
                             <div class="model">
-                                <img src="./img/model-2.png" alt="Иконка" class="model__img">
+                                <img src="https://belshed.github.io/baxBet/img/model-2.png" alt="Иконка" class="model__img">
                                 <h3 class="model__title">REVSHARE</h3>
                                 <p class="model__text">65% от заработка</p>
                             </div>
                             <div class="model">
-                                <img src="./img/model-3.png" alt="Иконка" class="model__img">
+                                <img src="https://belshed.github.io/baxBet/img/model-3.png" alt="Иконка" class="model__img">
                                 <h3 class="model__title">CUSTOM</h3>
                                 <p class="model__text">Индивидуально</p>
                             </div>
@@ -459,34 +460,34 @@
                     <tr class="inner">
                         <td align="center" class="benefits">
                             <div class="benefit benefit_transparent">
-                                <img src="./img/different-1.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/different-1.png" alt="Иконка" class="benefit__img">
                                 <h3 class="benefit__title">БЫСТРЫЕ ВЫПЛАТЫ</h3>
                                 <p class="benefit__text benefit__text_small text text_center">Мы не задерживаем выплаты, как другие партнерские сети. <br> Вы получите свои деньги в срок и без опозданий.</p>
                             </div>
                             <div class="benefit benefit_transparent">
-                                <img src="./img/different-2.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/different-2.png" alt="Иконка" class="benefit__img">
                                 <h3 class="benefit__title">СОБСТВЕННАЯ ПЛАТФОРМА</h3>
                                 <p class="benefit__text benefit__text_small text text_center">Благодаря собственной платформе казино мы реализуем любые пожелания партнера.</p>
                             </div>
                             <div class="benefit benefit_transparent">
-                                <img src="./img/different-3.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/different-3.png" alt="Иконка" class="benefit__img">
                                 <h3 class="benefit__title">ШЕЙВ ИСКЛЮЧЕН</h3>
                                 <p class="benefit__text benefit__text_small text text_center">Мы работаем с лицензионным софтом от PostAffilate.</p>
                                 <br>
                                 <p class="benefit__text benefit__text_small text text_center"></p>
                             </div>
                             <div class="benefit benefit_transparent">
-                                <img src="./img/different-4.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/different-4.png" alt="Иконка" class="benefit__img">
                                 <h3 class="benefit__title">ПРИЛОЖЕНИЯ</h3>
                                 <p class="benefit__text benefit__text_small text text_center">Наши проекты имеют собственные приложения для партнеров.</p>
                             </div>
                             <div class="benefit benefit_transparent">
-                                <img src="./img/different-5.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/different-5.png" alt="Иконка" class="benefit__img">
                                 <h3 class="benefit__title">ВЫСОКИЕ ВЫПЛАТЫ</h3>
                                 <p class="benefit__text benefit__text_small text text_center">Мы предоставляем наивысший процент выплат на рынке, так как имеем собственную платформу.</p>
                             </div>
                             <div class="benefit benefit_transparent">
-                                <img src="./img/different-6.png" alt="Иконка" class="benefit__img">
+                                <img src="https://belshed.github.io/baxBet/img/different-6.png" alt="Иконка" class="benefit__img">
                                 <h3 class="benefit__title">24/7</h3>
                                 <p class="benefit__text benefit__text_small text text_center">Мы на связи 24/7. Любой вопрос технического, либо финансового плана решается моментально.</p>
                             </div>
@@ -502,14 +503,14 @@
                             <table style="width: 100%;">
                                 <tr align="justify">
                                     <td style="padding: 0%;">
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-1.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="https://www.instagram.com/baxbet.casino/" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-1.png" alt="Иконка" class="bottom__link-img">
                                         </a>
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-2.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="https://t.me/baxbet_casino" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-2.png" alt="Иконка" class="bottom__link-img">
                                         </a>
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-3.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="www.facebook.com/groups/baxbet.casino/" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-3.png" alt="Иконка" class="bottom__link-img">
                                         </a>
                                     </td>
                                     <td style="padding: 0%;" align="right">
