--- a/baxBet/mail_4.html
+++ b/baxBet/mail_4.html
@@ -83,7 +83,7 @@
         }
         ul.text {
             margin-top: 15px;
-            list-style-image: url(./img/list-item.png);
+            list-style-image: url(https://belshed.github.io/baxBet/img/list-item.png);
             padding-left: 25px;
         }
         ul.text li {
@@ -135,7 +135,7 @@
             background-color: #150214;
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url(./img/card-bg-2.png);
+            background-image: url(https://belshed.github.io/baxBet/img/card-bg-2.png);
         }
 
         .card__title, .card__subtitle {
@@ -158,6 +158,7 @@
             padding: 11px 60px;
             border: 1px solid #150214;
             box-shadow: 0 0 0 2px #efc384;
+            white-space: nowrap;
         }
 
         .gradient-link {
@@ -175,7 +176,7 @@
             background-size: cover;
             background-position: center;
             overflow: hidden;
-            background-image: url(./img/gradient.png);
+            background-image: url(https://belshed.github.io/baxBet/img/gradient.png);
         }
 
         .hr {
@@ -251,8 +252,8 @@
 
         @media screen and (max-width: 580px) {
             .inner td{
-                padding-left: 25px;
-                padding-right: 25px;
+                padding-left: 25px !important;
+                padding-right: 25px !important;
             }
 
             .header {
@@ -270,11 +271,11 @@
             .benefit, .model {
                 margin-left: auto !important;
                 margin-right: auto !important;
-                display: block;
+                display: block !important;
             }
 
             .table td, .table th{
-                padding: 10px !important;
+                padding: 5px !important;
             }
 
             .table td {
@@ -282,13 +283,13 @@
             }
 
             .table__wrap td {
-                padding-left: 10px;
-                padding-right: 10px;
+                padding-left: 10px !important;
+                padding-right: 10px !important;
             }
 
             .model {
-                max-width: 400px;
-                width: 100%;
+                max-width: 400px !important;
+                width: 100% !important;
             }
 
             .hero__img_cards {
@@ -298,17 +299,23 @@
 
         @media screen and (max-width: 440px) {
             .card__body {
-                padding: 30px 20px;
-                background-image: none;
+                padding: 30px 45px !important;
+                background-image: none !important;
+            }
+
+            .card__title, .card__subtitle {
+                text-align: center !important;
+                width: 100% !important;
+                display: block !important;
             }
 
             .card__body > * {
-                display: block;
-                max-width: none;
+                display: block !important;
+                max-width: none !important;
             }
 
             .bottom td td {
-                display: block;
+                display: block !important;
                 text-align: center !important;
                 padding: 10px 0px !important;
             }
@@ -326,7 +333,7 @@
                 <table cellspacing="0" border="0" class="container header">
                     <tr align="justify">
                         <td>
-                            <img src="./img/logo.png" alt="Logo">
+                            <img src="https://belshed.github.io/baxBet/img/logo.png" alt="Logo">
                         </td>
                         <td align="right">
                             <a href="#" class="header__link">Вход</a>
@@ -340,12 +347,12 @@
                 <table cellspacing="0" border="0" class="container wrapper">
                     <tr class="hero">
                         <td>
-                            <img src="./img/hero-4.png" class="hero__img" alt="Hero image">
+                            <img src="https://belshed.github.io/baxBet/img/hero-4.png" class="hero__img" alt="Hero image">
                         </td>
                     </tr>
                     <tr class="inner content">
                         <td style="padding-top: 35px; padding-bottom: 10px;">
-                            <h1 class="text text_title text_center">Благодарим за регистрацию на<span style="color: #efc384;">BaxBET</span>!</h1>
+                            <h1 class="text text_title text_center">Благодарим за регистрацию на <span style="color: #efc384;">BaxBET</span>!</h1>
                         </td>
                     </tr>
                     <tr class="inner">
@@ -415,14 +422,14 @@
                             <table style="width: 100%;">
                                 <tr align="justify">
                                     <td style="padding: 0%;">
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-1.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="https://www.instagram.com/baxbet.casino/" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-1.png" alt="Иконка" class="bottom__link-img">
                                         </a>
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-2.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="https://t.me/baxbet_casino" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-2.png" alt="Иконка" class="bottom__link-img">
                                         </a>
-                                        <a href="#" class="bottom__link">
-                                            <img src="./img/social-link-3.png" alt="Иконка" class="bottom__link-img">
+                                        <a href="www.facebook.com/groups/baxbet.casino/" class="bottom__link">
+                                            <img src="https://belshed.github.io/baxBet/img/social-link-3.png" alt="Иконка" class="bottom__link-img">
                                         </a>
                                     </td>
                                     <td style="padding: 0%;" align="right">
