--- a/baxBet/mail_3.html
+++ b/baxBet/mail_3.html
@@ -23,7 +23,7 @@
         }
 
         a {
-            color: inherit;
+            color: inherit !important;
         }
 
         .body{
@@ -45,7 +45,7 @@
 
         .header__link {
             font-weight: 700;
-            color: #fff;
+            color: #fff !important;
             font-size: 17px;
         }
 
@@ -129,7 +129,7 @@
 
         .bottom__link {
             display: inline-block;
-            color: #fff;
+            color: #fff !important;
             text-decoration: none;
         }
 
@@ -251,7 +251,7 @@
             font-size: 17px;
             line-height: 17px;
             text-transform: uppercase;
-            color: #fff;
+            color: #fff !important;
             text-decoration: none;
             text-align: center;
             display: inline-block;
@@ -393,7 +393,7 @@
                             <img src="https://belshed.github.io/baxBet/img/logo.png" alt="Logo">
                         </td>
                         <td align="right">
-                            <a href="#" class="header__link">Вход</a>
+                            <a href="https://www.baxbet.com" class="header__link">Вход</a>
                         </td>
                     </tr>
                 </table>
@@ -408,7 +408,7 @@
                                 CPA ДО <span>65$</span>,  <br>
                                 REVSHARE <br>
                                 ДО <span>65 %</span></h1>
-                            <a href="#" class="orange-link">Регистрация</a>   
+                            <a href="https://www.baxbet.com" class="orange-link">Регистрация</a>   
                         </td>
                     </tr>
                 </table>
@@ -444,7 +444,7 @@
                     </tr>
                     <tr>
                         <td style="padding-bottom: 60px; padding-top: 15px;" align="center">
-                            <a href="#" class="orange-link">Регистрация</a>   
+                            <a href="https://www.baxbet.com" class="orange-link">Регистрация</a>   
                         </td>
                     </tr>
                     <tr>
@@ -525,7 +525,7 @@
         </tr>
         <tr style="background-color: #212363;">
             <td>
-                <p style="padding: 30px; display: block;" class="container text text_center text_small">Вы получили это письмо, потому что дали согласие на получение рассылки на boxbet Casino. Ознакомится с правилами использования сайта можно <a href="#">здесь</a>. В любой момент Вы можете <a href="#">отказаться</a> от получения рассылки.</p>
+                <p style="padding: 30px; display: block;" class="container text text_center text_small">Вы получили это письмо, потому что дали согласие на получение рассылки на boxbet Casino. Ознакомится с правилами использования сайта можно <a href="https://www.baxbet.com">здесь</a>. В любой момент Вы можете <a href="https://www.baxbet.com">отказаться</a> от получения рассылки.</p>
             </td>
         </tr>
     </table>
