--- a/baxBet/mail_1.html
+++ b/baxBet/mail_1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Заголовок письма</title>
     <style>
-        * {
+        *:not(.hero__img) {
             font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             box-sizing: border-box;
@@ -23,7 +23,7 @@
         }
 
         a {
-            color: inherit;
+            color: inherit !important;
         }
 
         .body{
@@ -44,9 +44,14 @@
             padding: 15px 0px;
         }
 
+        .content td {
+            padding-top: 35px;
+            padding-bottom: 35px;
+        }
+
         .header__link {
             font-weight: 700;
-            color: #fff;
+            color: #fff !important;
             font-size: 17px;
         }
 
@@ -63,7 +68,10 @@
         .hero__img {
             max-width: none;
             width: calc(100% + 3px);
-            transform: translate(-1px, -1px);
+        }
+
+        .hero__img_m1px {
+            margin: -1px 0 0 -1px !important;
         }
 
         .inner td{
@@ -71,7 +79,7 @@
         }
 
         .text {
-            color: #fff;
+            color: #fff !important;
             font-size: 16px;
             line-height: 28px;
         }
@@ -118,7 +126,7 @@
 
         .bottom__link {
             display: inline-block;
-            color: #fff;
+            color: #fff !important;
             text-decoration: none;
         }
 
@@ -175,20 +183,30 @@
             }
         }
 
-        @media screen and (max-width: 440px) {
+        @media (max-width: 480px) {
             .card__body {
-                padding: 30px 45px !important;
+                padding: 30px 25px !important;
                 background-image: none !important;
             }
 
             .card__body > * {
                 display: block !important;
                 max-width: none !important;
+                text-align: center !important;
+                width: 100% !important;
+            }
+
+            .card__title, .card__subtitle, .card__button {
+                display: block !important;
+                max-width: none !important;
+                text-align: center !important;
+                width: 100% !important;
             }
 
             .bottom td td {
                 display: block !important;
                 text-align: center !important;
+                width: 100% !important;
                 padding: 10px 0px !important;
             }
         }
@@ -204,7 +222,7 @@
                             <img src="https://belshed.github.io/baxBet/img/logo.png" alt="Logo">
                         </td>
                         <td align="right">
-                            <a href="#" class="header__link">Вход</a>
+                            <a href="https://www.baxbet.com" class="header__link">Вход</a>
                         </td>
                     </tr>
                 </table>
@@ -214,8 +232,8 @@
             <td>
                 <table cellspacing="0" border="0" class="container wrapper">
                     <tr class="hero">
-                        <td>
-                            <img src="https://belshed.github.io/baxBet/img/hero.png" class="hero__img" alt="Hero image">
+                        <td style="padding: 0 !important;">
+                            <img src="https://belshed.github.io/baxBet/img/hero.png" style="margin-left: -1px; margin-top: -1px;" class="hero__img hero__img_m1px" alt="Hero image">
                         </td>
                     </tr>
                     <tr class="inner content">
@@ -233,7 +251,7 @@
                             <div class="card__body">
                                 <span class="text text_center text_yellow text_title text_ttu card__title">Бонус код</span>
                                 <span class="text text_center text_yellow card__subtitle">Призыв к действию</span>
-                                <a href="#" class="card__button">Кнопка</a>
+                                <a href="https://www.baxbet.com" class="card__button">Кнопка</a>
                             </div>
                         </td>
                     </tr>
@@ -264,7 +282,7 @@
         </tr>
         <tr>
             <td>
-                <p style="padding: 30px; display: block;" class="container text text_center text_small">Вы получили это письмо, потому что дали согласие на получение рассылки на boxbet Casino. Ознакомится с правилами использования сайта можно <a href="#">здесь</a>. В любой момент Вы можете <a href="#">отказаться</a> от получения рассылки.</p>
+                <p style="padding: 30px; display: block;" class="container text text_center text_small">Вы получили это письмо, потому что дали согласие на получение рассылки на boxbet Casino. Ознакомится с правилами использования сайта можно <a href="https://www.baxbet.com">здесь</a>. В любой момент Вы можете <a href="https://www.baxbet.com">отказаться</a> от получения рассылки.</p>
             </td>
         </tr>
     </table>
