--- a/baxBet/mail_2.html
+++ b/baxBet/mail_2.html
@@ -23,7 +23,7 @@
         }
 
         a {
-            color: inherit;
+            color: inherit !important;
         }
 
         .body{
@@ -46,7 +46,7 @@
 
         .header__link {
             font-weight: 700;
-            color: #fff;
+            color: #fff !important;
             font-size: 17px;
         }
 
@@ -69,7 +69,9 @@
         .hero__img_cards {
             width: 100%;
             max-width: 820px;
-            transform: translate(-30px, 2px);
+            /* transform: translate(-30px, 2px); */
+            margin-left: 0px;
+            margin-bottom: -3px;
         }
 
         .inner td{
@@ -124,7 +126,7 @@
 
         .bottom__link {
             display: inline-block;
-            color: #fff;
+            color: #fff !important;
             text-decoration: none;
         }
 
@@ -224,7 +226,12 @@
             }
 
             .hero__img_cards {
-                transform: translate(-20px, 2px);
+                margin-left: -10px;
+                margin-bottom: -3px;
+            }
+
+            .benefits td {
+                text-align: center !important;
             }
 
             .text {
@@ -312,7 +319,7 @@
                             <img src="https://belshed.github.io/baxBet/img/logo.png" alt="Logo">
                         </td>
                         <td align="right">
-                            <a href="#" class="header__link">Вход</a>
+                            <a href="https://www.baxbet.com" class="header__link">Вход</a>
                         </td>
                     </tr>
                 </table>
@@ -334,7 +341,7 @@
                                     <td style="padding: 0px;">
                                         <img src="https://belshed.github.io/baxBet/img/welcome.png" class="welcome__img" style="margin-right: 30px; height: 100%; float: left;" alt="Картинка">
                                         <p class="text" style="margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus accumsan lacus vel facilisis.</p>
-                                        <a href="#" class="gradient-link">Кнопка</a>
+                                        <a href="https://www.baxbet.com" class="gradient-link">Кнопка</a>
                                     </td>
                                 </tr>
                             </table>
@@ -366,7 +373,7 @@
                             <div class="hr"></div>
                         </td>
                     </tr>
-                    <tr class="inner">
+                    <tr class="inner benefits">
                         <td align="justify">
                             <div class="benefit">
                                 <img src="https://belshed.github.io/baxBet/img/benefit-1.png" alt="Иконка" class="benefit__img">
@@ -397,7 +404,7 @@
                     <tr>
                         <td style="padding: 0px 10px;">
                             <p style="margin-bottom: 30px;" class="text text_center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
-                            <a href="#" style="margin: 0 auto; display: block;" class="gradient-link">Кнопка</a>
+                            <a href="https://www.baxbet.com" style="margin: 0 auto; display: block;" class="gradient-link">Кнопка</a>
                         </td>
                     </tr>
                     <tr class="inner bottom">
@@ -427,7 +434,7 @@
         </tr>
         <tr>
             <td>
-                <p style="padding: 30px; display: block;" class="container text text_center text_small">Вы получили это письмо, потому что дали согласие на получение рассылки на boxbet Casino. Ознакомится с правилами использования сайта можно <a href="#">здесь</a>. В любой момент Вы можете <a href="#">отказаться</a> от получения рассылки.</p>
+                <p style="padding: 30px; display: block;" class="container text text_center text_small">Вы получили это письмо, потому что дали согласие на получение рассылки на boxbet Casino. Ознакомится с правилами использования сайта можно <a href="https://www.baxbet.com">здесь</a>. В любой момент Вы можете <a href="https://www.baxbet.com">отказаться</a> от получения рассылки.</p>
             </td>
         </tr>
     </table>
