--- a/ginza/index.html
+++ b/ginza/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,58 +8,58 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <main class="global-container">
-        <div class="header">
-            <img src="./img/ginza-logo.png" alt="Логотип" class="header__img">
+    <main class="ginza-global-container">
+        <div class="ginza-header">
+            <img src="./img/ginza-logo.png" alt="Логотип" class="ginza-header__img">
         </div>
-        <div class="hero">
-            <div class="hero__container">
-                <div class="hero__content">
-                    <img src="./img/ginza-logo.png" alt="Логотип" class="hero__logo">
-                    <img src="./img/hero-product-img.png" alt="Логотип" class="hero__img">
-                    <span class="hero__text">Новый аромат</span>
-                    <span class="hero__name">Ginza - Гинза</span>
+        <div class="ginza-hero">
+            <div class="ginza-hero__container">
+                <div class="ginza-hero__content">
+                    <img src="./img/ginza-logo.png" alt="Логотип" class="ginza-hero__logo">
+                    <img src="./img/hero-product-img.png" alt="Логотип" class="ginza-hero__img">
+                    <span class="ginza-hero__text">Новый аромат</span>
+                    <span class="ginza-hero__name">Ginza - Гинза</span>
                 </div>
             </div>
         </div>
-        <div class="about">
-            <img src="./img/side-flower-1.png" alt="НОВЫЙ ЖЕНСТВЕННЫЙ АРОМАТ" class="about__deco">
-            <img src="./img/side-flower-2.png" alt="Цветочный букет" class="about__deco">
-            <h2 class="section-title about__title">ОТКРОЙТЕ ДЛЯ СЕБЯ <br> НОВЫЙ ЖЕНСТВЕННЫЙ АРОМАТ</h2>
-            <article class="about__item feature">
-                <h3 class="feature__title">Аромат</h3>
-                <img src="./img/feature-1.jpg" alt="Аромат" class="feature__media">
-                <p class="feature__text">Ginza отражает <br> традиции японской <br> парфюмерии, <br> прочно укоренившиеся в&nbsp;современном мире.</p>
+        <div class="ginza-about">
+            <img src="./img/side-flower-1.png" alt="НОВЫЙ ЖЕНСТВЕННЫЙ АРОМАТ" class="ginza-about__deco">
+            <img src="./img/side-flower-2.png" alt="Цветочный букет" class="ginza-about__deco">
+            <h2 class="ginza-section-title about__title">ОТКРОЙТЕ ДЛЯ СЕБЯ <br> НОВЫЙ ЖЕНСТВЕННЫЙ АРОМАТ</h2>
+            <article class="ginza-about__item ginza-feature">
+                <h3 class="ginza-feature__title">Аромат</h3>
+                <img src="./img/feature-1.jpg" alt="Аромат" class="ginza-feature__media">
+                <p class="ginza-feature__text">Ginza отражает <br> традиции японской <br> парфюмерии, <br> прочно укоренившиеся в&nbsp;современном мире.</p>
             </article>
-            <p class="about__text about__text_block about__text_center">Древесно-цветочный аромат с нежным и в то же время насыщенным шлейфом отражает идеальный баланс между силой и&nbsp;женственностью.</p>
-            <article class="about__item feature feature_reverse">
-                <h3 class="feature__title">ЦВЕТОЧНЫЙ <br> БУКЕТ...</h3>
-                <img src="./img/feature-2.jpg" alt="ЦВЕТОЧНЫЙ БУКЕТ" class="feature__media">
-                <p class="feature__text">Нежный цветочный букет из жасмина, фрезии, японской орхидеи и магнолии воплощает энергичную женственность.</p>
+            <p class="ginza-about__text ginza-about__text_block ginza-about__text_center">Древесно-цветочный аромат с нежным и в то же время насыщенным шлейфом отражает идеальный баланс между силой и&nbsp;женственностью.</p>
+            <article class="ginza-about__item ginza-feature ginza-feature_reverse">
+                <h3 class="ginza-feature__title">ЦВЕТОЧНЫЙ <br> БУКЕТ...</h3>
+                <img src="./img/feature-2.jpg" alt="ЦВЕТОЧНЫЙ БУКЕТ" class="ginza-feature__media">
+                <p class="ginza-feature__text">Нежный цветочный букет из жасмина, фрезии, японской орхидеи и магнолии воплощает энергичную женственность.</p>
             </article>
-            <article class="about__item feature">
-                <h3 class="feature__title">...ДРЕВЕСНЫЕ <br> НОТЫ</h3>
-                <img src="./img/feature-3.jpg" alt="ДРЕВЕСНЫЕ НОТЫ" class="feature__media">
-                <p class="feature__text">Древесные оттенки пачули, сандалового дерева и хиноки придают женственной композиции насыщенность <br> и яркость.</p>
+            <article class="ginza-about__item ginza-feature">
+                <h3 class="ginza-feature__title ginza-feature__title_dots">ДРЕВЕСНЫЕ <br> НОТЫ</h3>
+                <img src="./img/feature-3.jpg" alt="ДРЕВЕСНЫЕ НОТЫ" class="ginza-feature__media">
+                <p class="ginza-feature__text">Древесные оттенки пачули, сандалового дерева и хиноки придают женственной композиции насыщенность <br> и яркость.</p>
             </article>
         </div>
-        <div class="catalog">
-            <div class="catalog__container">
-                <h2 class="section-title catalog__title">ПОЗНАКОМЬТЕСЬ С КОЛЛЕКЦИЕЙ <br> SHISEIDO GINZA</h2>
-                <div class="catalog__wrap">
-                    <div class="catalog__item item">
-                        <img src="./img/catalog-item-1.png" alt="Ginza Парфюмированный гель для душа 200 мл" class="item__img">
-                        <p class="item__name">Ginza <br>
+        <div class="ginza-catalog">
+            <div class="ginza-catalog__container">
+                <h2 class="ginza-section-title ginza-catalog__title">ПОЗНАКОМЬТЕСЬ С КОЛЛЕКЦИЕЙ <br> SHISEIDO GINZA</h2>
+                <div class="ginza-catalog__wrap">
+                    <div class="ginza-catalog__item ginza-item">
+                        <img src="./img/catalog-item-1.png" alt="Ginza Парфюмированный гель для душа 200 мл" class="ginza-item__img">
+                        <p class="ginza-item__name">Ginza <br>
                             Парфюмированный гель для душа, <br>
                             200&nbsp;мл</p>
-                        <a href="#" class="item__link">Купить</a>
+                        <a href="#" class="ginza-item__link">Купить</a>
                     </div>
-                    <div class="catalog__item item">
-                        <img src="./img/catalog-item-1.png" alt="Ginza Парфюмированный лосьон для тела 200 мл" class="item__img">
-                        <p class="item__name">Ginza <br>
+                    <div class="ginza-catalog__item ginza-item">
+                        <img src="./img/catalog-item-1.png" alt="Ginza Парфюмированный лосьон для тела 200 мл" class="ginza-item__img">
+                        <p class="ginza-item__name">Ginza <br>
                             Парфюмированный лосьон для тела, <br>
                             200&nbsp;мл</p>
-                        <a href="#" class="item__link">Купить</a>
+                        <a href="#" class="ginza-item__link">Купить</a>
                     </div>
                 </div>
             </div>
