--- a/ginza/index.html
+++ b/ginza/index.html
@@ -25,7 +25,7 @@
         <div class="ginza-about">
             <img src="./img/side-flower-1.png" alt="НОВЫЙ ЖЕНСТВЕННЫЙ АРОМАТ" class="ginza-about__deco">
             <img src="./img/side-flower-2.png" alt="Цветочный букет" class="ginza-about__deco">
-            <h2 class="ginza-section-title about__title">ОТКРОЙТЕ ДЛЯ СЕБЯ <br> НОВЫЙ ЖЕНСТВЕННЫЙ АРОМАТ</h2>
+            <h2 class="ginza-section-title ginza-about__title">ОТКРОЙТЕ ДЛЯ СЕБЯ <br> НОВЫЙ ЖЕНСТВЕННЫЙ АРОМАТ</h2>
             <article class="ginza-about__item ginza-feature">
                 <h3 class="ginza-feature__title">Аромат</h3>
                 <img src="./img/feature-1.jpg" alt="Аромат" class="ginza-feature__media">
@@ -55,7 +55,7 @@
                         <a href="#" class="ginza-item__link">Купить</a>
                     </div>
                     <div class="ginza-catalog__item ginza-item">
-                        <img src="./img/catalog-item-1.png" alt="Ginza Парфюмированный лосьон для тела 200 мл" class="ginza-item__img">
+                        <img src="./img/catalog-item-2.png" alt="Ginza Парфюмированный лосьон для тела 200 мл" class="ginza-item__img">
                         <p class="ginza-item__name">Ginza <br>
                             Парфюмированный лосьон для тела, <br>
                             200&nbsp;мл</p>
